[o] Existing modules partially functional
- [!] Broken <goodrand>
- [!] Broken comparisons for arint
- [!] Some edge cases not properly handled
[v] Tests available
[x] CMake unavailable
===
2641307 Added arreal::operator%; fixed known bugs
[o] Existing modules partially functional
- [!] Broken <goodrand>
- [!] Some edge cases not properly handled
[v] Tests available
[x] CMake unavailable
===
4cd7d00 Added arreal::to_decimal; added one constant
[o] Existing modules partially functional
- [!] Broken <goodrand>
- [!] Some edge cases not properly handled
[v] Tests available
[x] CMake unavailable
===
ff06a0f Separated <exfmtio> from <fmtio_nullstream> and added a few features
[o] Existing modules partially functional
- [!] Something has changed a lot
- [!] Broken <goodrand>
- [!] Some edge cases not properly handled
[v] Tests available
[x] CMake unavailable
===
82f4ba2 Updated CMakeLists.txt
[o] Existing modules partially functional
- [!] Broken <goodrand>
- [!] Some edge cases not properly handled
[v] Tests available
[v] CMake available
===
c99c969 Overall cleanup #4; added HISTORY.txt
[o] Existing modules partially functional
- [!] Broken <goodrand>
- [!] Some edge cases not properly handled
[v] Tests available
[v] CMake available
===
ad41129 Fixed known bugs
[o] All existing modules functional
- [!] This version cannot be successfully compiled due to a mistake
- [!] Broken <goodrand>
- [!] Some edge cases not properly handled
[v] Tests available
[v] CMake available
===
2420ca0 Fixed known bugs (so many bugs)
[o] Existing modules partially functional
- [!] Broken <goodrand>
- [!] Some edge cases not properly handled
[v] Tests available
[v] CMake available
===
3b65e16 Overall cleanup #5; added splashes; fixed known bugs
[o] Existing modules partially functional
- [!] Some edge cases not properly handled
[v] Tests available
[v] CMake available
===
(HEAD!) Updated tests; fixed known bugs
[v] All existing modules functional
[v] Tests available
[v] CMake available